# RegulusAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PhaseD_Brief.md  README.md  REGULUS_CLI_SPEC.md  REGULUS_LRM_SYSTEM_PROMPT.md  REGULUS_STARTUP_INSTRUCTIONS.md  SYSTEM_MAP.md  UNIFIED_ARCHITECTURE.md  baseline_glm5.py  docker-compose.yml  hle_baseline.py  hle_explore.py  hle_index.json  hle_pilot.py  hle_seed_math_10q_42.json  hle_seed_math_20q_99.json  hle_seed_math_q10.json  hle_seed_math_q2.json  hle_seed_math_q3.json  hle_seed_math_q4.json  hle_seed_math_q4to10.json  hle_seed_math_q5.json  hle_seed_math_q6.json  hle_seed_math_q7.json  hle_seed_math_q8.json  hle_seed_math_q9.json  hle_seed_rerun_q1q3.json  hle_seed_rerun_q3_patch6.json  hle_select.py  pilot_v3.py  pyproject.toml  runs_tmp.json  select_hle_math.py  test_judge.py  weight.py
.claude/: settings.local.json
LogicGuard/: README.md  engine.py  paradox_demo.py  sample_reasoning.json  sensor.py  status_machine.py  test_engine.py  types.py  visualization.py  zero_gate.py
ToS-Coq/: Extraction_IVT.v  Extraction_PInterval.v  IVT.v  PInterval.v  PInterval_Composition.v  PInterval_Conv.v  PInterval_Linear.v  PInterval_Softmax.v  ivt_verified.ml  ivt_verified.mli  pinterval_verified.ml  pinterval_verified.mli
ToS-StatusMachine/: STATUS_MACHINE_SUMMARY.md  ToS_Status_Machine_v8.v  tos_status_machine.ml
api/: index.py
benchmark_results/: reanchor_results.csv  results.csv
benchmarks/: canonical_tree.py  fml_benchmark.py  integration_benchmark.py  logic_benchmark.py  logic_results.json  (+2 more)
(+608 files in other folders)
