[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regulus-ai"
version = "0.1.0"
description = "Deterministic reasoning verification for LLMs"
license = {text = "MIT"}
authors = [
    {name = "Horsocrates"}
]
keywords = [
    "ai-safety",
    "reasoning-verification",
    "hallucination-detection",
    "formal-verification",
    "theory-of-systems"
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
regulus = "regulus.cli:app"

[tool.pytest.ini_options]
markers = [
    "benchmark: hallucination benchmark tests (require ANTHROPIC_API_KEY)",
]

[tool.setuptools.packages.find]
include = ["regulus*"]
